add_subdirectory(Cry3DEngine)
add_subdirectory(CryAISystem)
add_subdirectory(CryAnimation)
add_subdirectory(CryCommon)
add_subdirectory(CryEntitySystem)
add_subdirectory(CryFont)
add_subdirectory(CryGame)
add_subdirectory(CryInput)
add_subdirectory(CryMovie)
add_subdirectory(CryNetwork)
add_subdirectory(CryPhysics)
add_subdirectory(CryScriptSystem)
add_subdirectory(CrySoundSystem)
add_subdirectory(CrySystem)
add_subdirectory(CryXml)

add_subdirectory(RenderDll)
add_subdirectory(ResourceCompiler)
add_subdirectory(ResourceCompilerImage)
add_subdirectory(ResourceCompilerPC)

add_subdirectory(FarCry)
add_subdirectory(FarCry_WinSV)

add_subdirectory(Editor)

setup_cry_target_shared(Cry3DEngine)
setup_cry_target_shared(CryAISystem)
setup_cry_target_shared(CryAnimation)
setup_cry_target_shared(CryCommon)
setup_cry_target_shared(CryEntitySystem)
setup_cry_target_shared(CryFont)
setup_cry_target_shared(CryGame)
setup_cry_target_shared(CryInput)
setup_cry_target_shared(CryMovie)
setup_cry_target_shared(CryNetwork)
setup_cry_target_shared(CryPhysics)
setup_cry_target_shared(CryScriptSystem)
setup_cry_target_shared(CrySoundSystem)
setup_cry_target_shared(CrySystem)
setup_cry_target_shared(ResourceCompiler)
setup_cry_target_shared(ResourceCompilerImage)
setup_cry_target_shared(ResourceCompilerPC)
setup_cry_target_shared(FarCry)
setup_cry_target_shared(FarCry_WinSV)
