add_library(Cry3DEngine SHARED
    3dEngine.cpp
    3dEngine.h
    3DEngineLight.cpp
    3dEngineLoad.cpp
    3DEngineRender.cpp
    3DEngineScreenEffects.cpp
    Array2d.h
    BaseObj.h
    BasicArea.cpp
    BasicArea.h
    bflyes.cpp
    bflyes.h
    Brush.cpp
    Brush.h
    BrushLM.cpp
    cbuffer.cpp
    cbuffer.h
    Cry3DEngine.cpp
    Cry3DEngineBase.h
    CryStaticModel.cpp
    CryStaticModel.h
    cvars.cpp
    cvars.h
    dds.h
    Decal.cpp
    DecalManager.cpp
    DecalManager.h
    detail_grass.cpp
    detail_grass.h
    File.cpp
    File.h
    Geom.cpp
    Geom.h
    Helper.cpp
    Helper.h
    IndoorShadowVolumes.h
    IndoorVolumes.h
    Light.cpp
    Light.h
    LightLoad.cpp
    LightMan.cpp
    LightMan.h
    LMSerializationManager2.cpp
    LMSerializationManager2.h
    MatMan.cpp
    Meshidx.cpp
    Node.cpp
    Node.h
    ObjMan.cpp
    ObjMan.h
    ObjManDraw.cpp
    ObjManDrawEntity.cpp
    ObjManFar.cpp
    ObjManPhys.cpp
    ObjManShadows.cpp
    ObjManStreaming.cpp
    particle.cpp
    ParticleEffect.cpp
    ParticleEffect.h
    ParticleEmitter.cpp
    ParticleEmitter.h
    partman.cpp
    partman.h
    partpolygon.cpp
    rain.cpp
    rain.h
    SaveCFG.cpp
    ShadowVolumeEdge.h
    SpriteManager.cpp
    StatObj.h
    StatObjCompiler.cpp
    StatObjConstr.cpp
    StatObjFar.cpp
    StatObjLoad.cpp
    StatObjPhys.cpp
    StatObjRend.cpp
    StatObjSerialize.cpp
    StatObjShadow.cpp
    StatObjShadowVolumes.cpp
    StatObjStream.cpp
    StdAfx.cpp
    StdAfx.h
    StencilShadowConnectivity.h
    StencilShadowConnectivityBuilder.cpp
    StencilShadowConnectivityBuilder.h
    StencilShadowEdgeDetector.cpp
    StencilShadowEdgeDetector.h
    terrain.cpp
    terrain.h
    terrain_damage.cpp
    terrain_det_tex.cpp
    terrain_hmap.cpp
    terrain_init.cpp
    terrain_light.cpp
    terrain_load.cpp
    terrain_render.cpp
    terrain_sector.cpp
    terrain_sector.h
    terrain_sector_beach.cpp
    terrain_sector_render.cpp
    terrain_sector_tex.cpp
    terrain_tex_pool.cpp
    terrain_water.h
    terrain_water_quad.cpp
    terran_edit.cpp
    Vegetation.cpp
    Vegetation.h
    VisAreaMan.cpp
    VisAreas.cpp
    VisAreas.h
    WaterVolumes.cpp
    WaterVolumes.h
    )
target_link_libraries(Cry3DEngine PRIVATE CryCommon)
target_compile_definitions(Cry3DEngine PRIVATE CRY3DENGINE_EXPORTS)
