add_library(CryAISystem SHARED
    AgentParams.h
    AIAttribute.cpp
    AIAttribute.h
    AIAutoBalance.cpp
    AIAutoBalance.h
    AIMemStats.cpp
    AIObject.cpp
    AIObject.h
    AIPlayer.cpp
    AIPlayer.h
    AIVehicle.cpp
    AIVehicle.h
    BuildingIDManager.cpp
    BuildingIDManager.h
    CAISystem.cpp
    CAISystem.h
    CMakeLists.txt
    CryAISystem.cpp
    CryAISystem.h
    CTriangulator.cpp
    CTriangulator.h
    Formation.cpp
    Formation.h
    GoalOp.cpp
    GoalOp.h
    GoalPipe.cpp
    GoalPipe.h
    Graph.cpp
    Graph.h
    GraphUtility.cpp
    Heuristic.cpp
    Heuristic.h
    IAgent.cpp
    PipeUser.cpp
    PipeUser.h
    pointer_container.h
    Puppet.cpp
    Puppet.h
    StdAfx.cpp
    StdAfx.h
    VertexList.cpp
    VertexList.h
    )
target_link_libraries(CryAISystem PRIVATE CryCommon)
target_compile_definitions(CryAISystem PRIVATE CRYAISYSTEM_EXPORTS)
