add_library(CryGame SHARED
    AdvCamSystem.cpp
    AdvCamSystem.h
    AIHandler.cpp
    AIHandler.h
    BitStream_Base.cpp
    BitStream_Base.h
    BitStream_Compressed.cpp
    BitStream_Compressed.h
    BugsFlock.cpp
    BugsFlock.h
    CMakeLists.txt
    CMovieUser.h
    CryGame.cpp
    CryGame.h

    EntityClassRegistry.cpp
    EntityClassRegistry.h
    FireType.h
    Flock.cpp
    Flock.h
    Game.cpp
    Game.h
    GameActionInput.cpp
    GameCallbacks.cpp
    GameClientServer.cpp
    GameDevMode.cpp
    GameEquipPacks.cpp
    GameEvents.cpp
    GameLoading.cpp
    GameMemStats.cpp
    GameMisc.cpp
    GameMods.cpp
    GameMods.h
    GameMovieUser.cpp
    GameObject.h
    GameRadar.cpp
    GameShared.h
    GameTagPoints.cpp
    IngameDialog.cpp
    IngameDialog.h
    IXSystem.h
    NetEntityInfo.cpp
    NetEntityInfo.h
    PlayerSystem.h
    ScriptObjectAdvCamSystem.cpp
    ScriptObjectAdvCamSystem.h
    ScriptObjectAI.cpp
    ScriptObjectAI.h
    ScriptObjectBoids.cpp
    ScriptObjectBoids.h
    ScriptObjectClient.cpp
    ScriptObjectClient.h
    ScriptObjectGame.cpp
    ScriptObjectGame.h
    ScriptObjectInput.cpp
    ScriptObjectInput.h
    ScriptObjectLanguage.cpp
    ScriptObjectLanguage.h
    ScriptObjectPlayer.cpp
    ScriptObjectPlayer.h
    ScriptObjectRenderer.cpp
    ScriptObjectRenderer.h
    ScriptObjectServer.cpp
    ScriptObjectServer.h
    ScriptObjectServerSlot.cpp
    ScriptObjectServerSlot.h
    ScriptObjectSpectator.cpp
    ScriptObjectSpectator.h
    ScriptObjectStream.cpp
    ScriptObjectStream.h
    ScriptObjectSynched2DTable.cpp
    ScriptObjectSynched2DTable.h
    ScriptObjectUI.cpp
    ScriptObjectUI.h
    ScriptObjectVehicle.cpp
    ScriptObjectVehicle.h
    ScriptObjectWeaponClass.cpp
    ScriptObjectWeaponClass.h
    ScriptTimerMgr.cpp
    ScriptTimerMgr.h
    Spectator.cpp
    Spectator.h
    StdAfx.cpp
    StdAfx.h
    StringTableMgr.cpp
    StringTableMgr.h
    Synched2DTable.cpp
    Synched2DTable.h
    SynchedRandomSeed.cpp
    SynchedRandomSeed.h
    TagPoint.h
    TimeDemoRecorder.cpp
    TimeDemoRecorder.h
    UIButton.cpp
    UIButton.h
    UICheckBox.cpp
    UICheckBox.h
    UIComboBox.cpp
    UIComboBox.h
    UICVars.cpp
    UICVars.h
    UIDivX_Video.cpp
    UIDivX_Video.h
    UIEditBox.cpp
    UIEditBox.h
    UIHud.cpp
    UIHud.h
    UIListView.cpp
    UIListView.h
    UIMenu.cpp
    UIMenu.h
    UIMessages.h
    UIScreen.cpp
    UIScreen.h
    UIScrollBar.cpp
    UIScrollBar.h
    UIStatic.cpp
    UIStatic.h
    UISystem.cpp
    UISystem.h
    UITodo.txt
    UIVideoPanel.cpp
    UIVideoPanel.h
    UIWidget.cpp
    UIWidget.h
    WeaponClass.cpp
    WeaponClass.h
    WeaponSystemEx.cpp
    WeaponSystemEx.h
    XArea.cpp
    XArea.h
    XClient.cpp
    XClient.h
    XClientSnapshot.cpp
    XClientSnapshot.h
    XDemoMgr.cpp
    XDemoMgr.h
    XEntityProcessingCmd.cpp
    XEntityProcessingCmd.h
    XGUIControl.cpp
    XGUIControl.h
    XNetwork.cpp
    XNetwork.h
    XNetworkStats.cpp
    XNetworkStats.h
    XObjectProxy.cpp
    XObjectProxy.h
    XPlayer.cpp
    XPlayer.h
    XPlayerCamera.cpp
    XPlayerLight.cpp
    XplayerVehicle.cpp
    XPuppetProxy.cpp
    XPuppetProxy.h
    XServer.cpp
    XServer.h
    XServerRules.cpp
    XServerRules.h
    XServerSlot.cpp
    XServerSlot.h
    XSnapshot.cpp
    XSnapshot.h
    XSurfaceMgr.cpp
    XSurfaceMgr.h
    XSystemBase.cpp
    XSystemBase.h
    XSystemClient.cpp
    XSystemClient.h
    XSystemDummy.cpp
    XSystemDummy.h
    XSystemEntities.cpp
    XSystemEntities.h
    XSystemServer.cpp
    XSystemServer.h
    XVehicle.cpp
    XVehicle.h
    XVehicleProxy.cpp
    XVehicleProxy.h
    XVehicleProxyHeli.cpp
    XVehicleSystem.cpp
    XVehicleSystem.h
)
target_link_libraries(CryGame PRIVATE CryCommon Bink DivxMedia) # todo:  ASEQuery
target_compile_definitions(CryGame PRIVATE CRYGAME_EXPORTS)
