add_library(CryMovie SHARED
    AnimCameraNode.cpp
    AnimCameraNode.h
    AnimNode.cpp
    AnimNode.h
    AnimSequence.cpp
    AnimSequence.h
    AnimSplineTrack.cpp
    AnimSplineTrack.h
    AnimTrack.cpp
    AnimTrack.h
    BoolTrack.cpp
    BoolTrack.h
    CharacterTrack.cpp
    CharacterTrack.h
    CMakeLists.txt
    ConsoleTrack.cpp
    ConsoleTrack.h
    CryMovie.cpp
    CryMovie.h
    CVarNode.cpp
    CVarNode.h
    EntityNode.cpp
    EntityNode.h
    EventTrack.cpp
    EventTrack.h
    ExprTrack.cpp
    ExprTrack.h
    MaterialNode.cpp
    MaterialNode.h
    Movie.cpp
    Movie.h
    MusicTrack.cpp
    MusicTrack.h
    SceneNode.cpp
    SceneNode.h
    ScriptVarNode.cpp
    ScriptVarNode.h
    SelectTrack.cpp
    SelectTrack.h
    SequenceIt.cpp
    SequenceIt.h
    smartptr.h
    SoundTrack.cpp
    SoundTrack.h
    Spline.h
    StdAfx.cpp
    StdAfx.h
)
target_link_libraries(CryMovie PRIVATE CryCommon CryXml)
target_compile_definitions(CryMovie PRIVATE CRYMOVIE_EXPORTS)
