add_library(CryPhysics SHARED
    aabbtree.cpp
    aabbtree.h
    articulatedentity.cpp
    articulatedentity.h
    boolean2d.cpp
    boxgeom.cpp
    boxgeom.h
    bvtree.h
    CryPhysics.cpp
    CryPhysics.h
    cylindergeom.cpp
    cylindergeom.h
    geoman.cpp
    geoman.h
    geometries.h
    geometry.cpp
    geometry.h
    grid.h
    heightfieldbv.cpp
    heightfieldbv.h
    heightfieldgeom.cpp
    heightfieldgeom.h
    intersectionchecks.cpp
    intersectionchecks.h
    IPhysics.h
    linunprojectionchecks.cpp
    livingentity.cpp
    livingentity.h
    matrixnm.cpp
    matrixnm.h
    obbtree.cpp
    obbtree.h
    overlapchecks.cpp
    overlapchecks.h
    particleentity.cpp
    particleentity.h
    physicalentity.cpp
    physicalentity.h
    physicalplaceholder.cpp
    physicalplaceholder.h
    physicalworld.cpp
    physicalworld.h
    polynomial.h
    qhull.cpp
    quotient.h
    raybv.cpp
    raybv.h
    raygeom.cpp
    raygeom.h
    rigidbody.cpp
    rigidbody.h
    rigidentity.cpp
    rigidentity.h
    ropeentity.cpp
    ropeentity.h
    rotunprojectionchecks.cpp
    singleboxtree.cpp
    singleboxtree.h
    softentity.cpp
    softentity.h
    spheregeom.cpp
    spheregeom.h
    StdAfx.cpp
    StdAfx.h
    trimesh.cpp
    trimesh.h
    unprojectionchecks.h
    utils.cpp
    utils.h
    vectorn.h
    wheeledvehicleentity.cpp
    wheeledvehicleentity.h
)
target_link_libraries(CryPhysics PRIVATE CryCommon)
target_compile_definitions(CryPhysics PRIVATE PHYSICS_EXPORTS PIII_SSE ENTITY_PROFILER_ENABLED)
