add_library(ResourceCompilerPC SHARED
    StatCGFCompiler/BaseObj.h
    StatCGFCompiler/CryStaticModel.cpp
    StatCGFCompiler/CryStaticModel.h
    StatCGFCompiler/File.cpp
    StatCGFCompiler/File.h
    StatCGFCompiler/Geom.cpp
    StatCGFCompiler/Geom.h
    StatCGFCompiler/Helper.cpp
    StatCGFCompiler/Helper.h
    StatCGFCompiler/Light.cpp
    StatCGFCompiler/Light.h
    StatCGFCompiler/Meshidx.cpp
    StatCGFCompiler/Node.cpp
    StatCGFCompiler/Node.h
    StatCGFCompiler/StatCGFCompiler.cpp
    StatCGFCompiler/StatCGFCompiler.h
    StatCGFCompiler/StatCGFCompilerLB.cpp
    StatCGFCompiler/StatCGFCompilerLBSerialize.cpp
    StatCGFCompiler/StatCGFShadowVolume.h
    StatCGFCompiler/StatCGFShadVol.cpp
    StatCGFCompiler/StatCGFShadVol.h
    StatCGFCompiler/StatObj.h
    # StatCGFCompiler/StatObjConstr.cpp
    StatCGFCompiler/StatObjPhys.cpp
    StatCGFCompiler/StatObjPhysics.cpp
    # StatCGFCompiler/tang_basis.cpp

    AutoFile.h
    BoneLightBindInfo.cpp
    BoneLightBindInfo.h
    CalConvertor.h
    CgfConvertor.cpp
    CgfConvertor.h
    CgfUtils.cpp
    ChunkFileReader.cpp
    ChunkFileReader.h
    Controller.h
    CryAnimationInfo.h
    CryBoneDesc.cpp
    CryBoneDesc.h
    CrySkinAMD64.asm
    CrySkinBase.cpp
    CrySkinBase.h
    CrySkinBasisBuilder.cpp
    CrySkinBasisBuilder.h
    CrySkinBuilder.cpp
    CrySkinBuilder.h
    CrySkinBuilderBase.cpp
    CrySkinBuilderBase.h
    CrySkinFull.cpp
    CrySkinFull.h
    CrySkinMorph.cpp
    CrySkinMorph.h
    CrySkinMorphBuilder.cpp
    CrySkinMorphBuilder.h
    CrySkinRigidBasis.cpp
    CrySkinRigidBasis.h
    CrySkinTypes.h
    CryVertexBinding.cpp
    CryVertexBinding.h
    FileMapping.cpp
    FileMapping.h
    GC_CgfConverter.cpp
    GC_CgfConverter.h
    MathUtils.h
    QuaternionExponentX87.h
    RenderMeshBuilder.cpp
    RenderMeshBuilder.h
    ResourceCompilerPC.cpp
    ResourceCompilerPC.h
    ResourceCompilerPlugin.def
    SkinDataSources.cpp
    SkinDataSources.h
    SSEUtils.cpp
    SSEUtils.h
    stdafx.cpp
    stdafx.h
    StencilShadowConnectivity.h
    StencilShadowConnectivityBuilder.cpp
    StencilShadowConnectivityBuilder.h
    TangentSpaceCalculation.h
)
target_link_libraries(ResourceCompilerPC PRIVATE CryCommon ResourceCompiler NvTriStrip)
target_compile_definitions(ResourceCompilerPC PRIVATE RESOURCECOMPILERPC_EXPORTS)
